--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
+<h1>hello world</h1>
+<p>Webサイトが表示されるまでの流れ〜WebサーバーDNSサーバーまで〜</p>
+<img src="i2124010/vol2">
 
+https://utakou.github.io/vol2/?version=
