--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>hello world</h1>
 <p>Webサイトが表示されるまでの流れ〜WebサーバーDNSサーバーまで〜</p>
-<img src="i2124010/vol2">
+<img src="i2124010:vol2.png">
 
 https://utakou.github.io/vol2/?version=
 
